--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,7 +25,8 @@ input {
    padding: 20px;
    background-color: rgba(255, 255, 255, 0.474);
    color: black;
-   border-radius: 10px;
+               border: 1px solid black;
+               border-radius: 10px;
 
    #input {
       margin-bottom: 40px;
@@ -53,6 +54,7 @@ input {
             padding: 7.5px 15px;
             font-size: 1rem;
             background-color: rgb(255, 255, 255);
+            border: 1px solid black;
             border-radius: 5px;
             
             &:active {
@@ -87,6 +89,7 @@ input {
             border-radius: 5px;
             font-size: 1.3rem;
             padding-right: 30px;
+            border: 1px solid black;
             word-wrap: break-word;
          }
 
@@ -234,11 +237,12 @@ input {
    width: 100%;
    height: 100%;
    top: 0;
-
+   
    .main-popUp {
+      border: 1px solid black;
       width: 450px;
       padding: 40px 20px;
-      background-color: rgba(255, 255, 255, 0.87);
+      background-color: rgba(255, 255, 255, 0.9);
       border-radius: 10px;
       margin: 0 auto;
       margin-top: 30vh;
